[package]
name = "yew-web3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# yew = { version="0.19", features=["web-sys"] }
yew = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3" 
web-sys="0.3"

[dependincies.web-sys]
version = "0.3"
features = [
    "Window",
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
]